--- a/templates/produto/index.html.twig
+++ b/templates/produto/index.html.twig
@@ -13,7 +13,7 @@
     <hr>
     <div class="row">
         <div class="col-md-12">
-            <a href="" class="btn btn-primary btn-lg float-right">Adicionar Produto</a>
+            <a href="{{ path('cadastrar_produto') }}" class="btn btn-primary btn-lg float-right">Adicionar Produto</a>
         </div>
     </div>
     <table class="table table-striped table-hover mt-3">
@@ -33,7 +33,7 @@
                     <td>{{ produto.preco }}</td>
                     <td>
                         <a class="btn btn-sm btn-warning" href=""><i class="fa fa-eye"></i></a>
-                        <a class="btn btn-sm btn-success" href=""><i class="fa fa-pencil-alt"></i></a>
+                        <a class="btn btn-sm btn-success" href="{{ path('editar_produto', {"id": produto.id}) }}"><i class="fa fa-pencil-alt"></i></a>
                         <a class="btn btn-sm btn-danger" href=""><i class="fa fa-trash"></i></a>
                     </td>
                 </tr>
