--- a/templates/produto/index.html.twig
+++ b/templates/produto/index.html.twig
@@ -9,6 +9,12 @@
         </div>
     {% endfor %}
 
+    {% for flashMessage in app.session.flashbag.get('warning') %}
+        <div class="alert alert-warning">
+            {{ flashMessage }}
+        </div>
+    {% endfor %}
+
     <h1>Listando Produtos</h1>
     <hr>
     <div class="row">
@@ -34,10 +40,24 @@
                     <td>
                         <a class="btn btn-sm btn-warning" href="{{ path('visualizar_produto', {"id": produto.id}) }}"><i class="fa fa-eye"></i></a>
                         <a class="btn btn-sm btn-success" href="{{ path('editar_produto', {"id": produto.id}) }}"><i class="fa fa-pencil-alt"></i></a>
-                        <a class="btn btn-sm btn-danger" href=""><i class="fa fa-trash"></i></a>
+                        <a class="btn btn-sm btn-danger btn-excluir-produto" href="{{ path('apagar_produto', {"id": produto.id}) }}"><i class="fa fa-trash"></i></a>
                     </td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.btn-excluir-produto').click(function (e) {
+                e.preventDefault();
+
+                var url = $(this).prop('href');
+
+                if (confirm("Deseja excluir esse produto?")) {
+                    window.location = url;
+                }
+            })
+        })
+    </script>
 {% endblock %}
